# ClipAnchor

./: .editorconfig  .gitattributes  .gitignore  .npmrc  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
docs/: index.html
docs/i18n/: README.md  language-pack.template.json
scripts/: clean.mjs  collect-release.mjs  node-tool.mjs  package-portable.ps1  package-portable.sh  tauri-build.mjs  tauri-dev.mjs  toolchain.mjs  validate-language-pack.mjs
src/: App.jsx  api.js  i18n.js  index.html  shortcutDisplay.js  styles.css  theme.js  useTransientScrollbar.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  app_menu.rs  autostart.rs  clipboard_service.rs  commands.rs  database.rs  lib.rs  macos_native.rs  main.rs  models.rs  paths.rs  popup.rs  settings.rs  shortcut.rs  tray.rs  update_service.rs  window_control.rs  window_shape.rs
src-tauri/windows/: nsis-language-selector.nsh
src/locales/: en.js  zh.js
src/pages/: ClipboardPage.jsx  SettingsPage.jsx
src/popup/: PopupWindow.jsx
